# ADO-to-GitHub-Pre-migration-assessment-tool

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_dirs.bat
.github/workflows/: ci.yml
backend/: README.md  main.py  pyproject.toml
docs/: TESTING.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Configure.tsx  Dashboard.tsx  Landing.tsx  Migrate.tsx  Report.tsx  Scan.tsx
src/ado_readiness/: __init__.py  ado_client.py  cli.py  config.py  reporter.py  scanner.py
tests/: test_cli.py  test_config.py
